fix: column gap in footer

--- a/2 task/index.css
+++ b/2 task/index.css
@@ -460,7 +460,8 @@ body {
 
   .menu-list {
     margin: 0;
-    column-gap: 1rem;
+    column-gap: 4.7rem;
+    grid-template-columns: 35% 1fr;
   }
 
   .menu-list__item--desktop {
